fixed z-index for mailchimp popup

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -30,3 +30,7 @@ img {
 .temp-pag {
 	text-align: center;
 }
+
+.mc-modal {
+	z-index: 8675311 !important;
+}
